# reminder

./: .env.sample  .gitignore  pyproject.toml
src/reminder/: config.py  const.py  db.py  event_handlers.py  handler.py  logging.py  main.py  message.py  models.py
src/routine_bot/: const.py  constants.py  db.py  enums.py  handlers.py  main.py  messages.py  models.py
